tests/NormalTests/paczka1/small_fuzzy/48297972.err
Error in line 1: UGVH A62 67,9
Error in line 3: UGVH A100 43,2
Error in line 4: UGVH A999 1,5
Error in line 13: 6WzjAMS381 A999 4,73
